--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:luckydrq/EE.git"
+    "url": "git@github.com:luckydrq/power-ee.git"
   },
   "devDependencies": {
     "istanbul": "~0.3.20",
